--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500&family=Source+Sans+Pro&display=swap');
     </style>
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,7 +34,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>React Redux App</title>
+    <title>Scandiweb Assignment Project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
